[package]
name = "leanvm-xmss-c"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
leansig = { git = "https://github.com/leanEthereum/leansig.git" }
rec_aggregation = { git = "https://github.com/leanEthereum/leanMultisig.git", rev = "45235066ce7a8f61b45c8ae71922a7b4e6fae7cd", package = "rec_aggregation" }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
p3-field = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "lean-vm-simple" }
p3-koala-bear = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "lean-vm-simple" }

[build-dependencies]
cbindgen = "0.27"
