[package]
name = "leanvm-xmss-c"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
leansig = { git = "https://github.com/leanEthereum/leansig.git", rev = "73bedc26ed961b110df7ac2e234dc11361a4bf25" }
rec_aggregation = { git = "https://github.com/leanEthereum/leanMultisig.git", rev = "e4474138487eeb1ed7c2e1013674fe80ac9f3165", package = "rec_aggregation" }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
p3-field = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "lean-vm-simple" }
p3-koala-bear = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "lean-vm-simple" }
ssz = { package = "ethereum_ssz", version = "0.10" }

[build-dependencies]
cbindgen = "0.27"
